tests/security/taintedInParentLoader/output.txt
ERROR: TaintedData - input.hack:15:25 - Data from a URL query string found its way to a SQL query using path $_GET --array-fetch--> arrayvalue-fetch (input.hack:27:25) ----> C::foo#1 (input.hack:22:32) ----> $user_id (input.hack:22:32) ----> AGrandChild::loadFull#1 (input.hack:4:44) ----> A::loadFull#1 (input.hack:23:31) ----> $sink (input.hack:4:44) ----> A::loadPartial#1 (input.hack:2:56) ----> AChild::loadPartial#1 ----> $sink (input.hack:14:47) ----> composition (input.hack:15:25) ----> AsyncMysqlConnection::query#1 (input.hack:15:25)